--- a/public/admin-orders.html
+++ b/public/admin-orders.html
@@ -1,10 +1,3 @@
-<script>
-  if (localStorage.getItem("role") !== "admin") {
-    alert("Admin only");
-    location.href = "auth.html";
-  }
-</script>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,35 +6,29 @@
 </head>
 <body>
 
-<div class="products">
-  <h2 style="color:white">All Orders</h2>
-  <div id="orders"></div>
-</div>
-
-<script src="./Javascript/app.js"></script>
 <script>
-  loadAdminOrders();
+  if (localStorage.getItem("role") !== "admin") {
+    alert("Admin only");
+    location.href = "auth.html";
+  }
 </script>
-
-<div id="orders"></div>
-<script>
-  loadAdminOrders();
-</script>
-
-<h2>Admin – Orders List</h2>
-
-<div id="ordersContainer"></div>
-
-<!-- IMPORTANT: JS MUST BE AT BOTTOM -->
-<script src="./Javascript/admin-orders.js"></script>
-
 
 <div class="top-bar">
-  <span class="logout-icon" onclick="logout()" title="Logout">
-    🔓
-  </span>
+  <span class="logout-icon" onclick="logout()" title="Logout">🔓</span>
 </div>
 
+<div class="products">
+  <h2 style="color:white">All Orders</h2>
+
+  <!-- Orders will load here -->
+  <div id="ordersContainer"></div>
+</div>
+
+<!-- Load logout() function from app.js -->
+<script src="./Javascript/app.js"></script>
+
+<!-- Load orders script -->
+<script src="./Javascript/admin-orders.js"></script>
 
 </body>
 </html>
