--- a/public/cart.html
+++ b/public/cart.html
@@ -1,9 +1,3 @@
-<script>
-  if (!localStorage.getItem("user")) {
-    location.href = "auth.html";
-  }
-</script>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,23 +6,10 @@
 </head>
 <body>
 
-<div class="products">
-  <h2 style="color:white">🛒 Your Cart</h2>
-  <div id="cartItems"></div>
-  <div id="cartSummary" class="cart-summary">
-  <h3>Total Amount: ₹<span id="cartTotal">0</span></h3>
-  <button onclick="goToCheckout()">Place Order</button>
-</div>
-
-  <h3 id="totalPrice" style="color:white"></h3>
-  <button onclick="location.href='checkout.html'">Proceed to Checkout</button>
-
-  <button onclick="logout()">Logout</button>
-</div>
-
-<script src="./Javascript/app.js"></script>
 <script>
-  loadCart();
+  if (!localStorage.getItem("user")) {
+    location.href = "auth.html";
+  }
 </script>
 
 <div class="top-bar">
@@ -37,6 +18,19 @@
   </span>
 </div>
 
+<div class="products">
+  <h2 style="color:white">🛒 Your Cart</h2>
+
+  <div id="cartItems"></div>
+
+  <div id="cartSummary" class="cart-summary">
+    <h3>Total Amount: ₹<span id="cartTotal">0</span></h3>
+    <button onclick="goToCheckout()">Place Order</button>
+  </div>
+</div>
+
+<!-- Load JS only once -->
+<script src="./Javascript/app.js"></script>
 
 </body>
 </html>
