--- a/public/box.html
+++ b/public/box.html
@@ -16,7 +16,7 @@
 
 <div class="top-bar">
   <span class="logout-icon" onclick="logout()" title="Logout">
-    🔓
+   <button onclick="logout()">Logout</button> 🔓
   </span>
 </div>
 
