--- a/public/cart.html
+++ b/public/cart.html
@@ -14,12 +14,13 @@
 
 <div class="top-bar">
   <span class="logout-icon" onclick="logout()" title="Logout">
-    🔓
+    <button onclick="logout()">Logout</button>🔓
   </span>
 </div>
 
 <div class="products">
   <h2 style="color:white">🛒 Your Cart</h2>
+  <button onclick="getcart()">Cart</button>
 
   <div id="cartItems"></div>
 
