--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,14 +17,14 @@
 
   <div class="cart-icon">
     <a href="cart.html">
-      🛒 <span id="cartCount">0</span>
+      <button onclick="getcart()">Cart</button>🛒 <span id="cartCount">0</span>
     </a>
   </div>
 </header>
 
 <div class="top-bar">
   <span class="logout-icon" onclick="logout()" title="Logout">
-    🔓
+   <button onclick="logout()">Logout</button> 🔓
   </span>
 </div>
 
