--- a/public/questionnaire.html
+++ b/public/questionnaire.html
@@ -9,7 +9,7 @@
 <script>
   if (!localStorage.getItem("user")) {
     alert("Please login first");
-    window.location.href = "auth.html";
+    window.location.href = "index.html";
   }
 </script>
 
