--- a/public/admin.html
+++ b/public/admin.html
@@ -9,8 +9,8 @@
 
 <script>
   if (localStorage.getItem("role") !== "admin") {
-    alert("Admin access only");
-    window.location.href = "auth.html";
+   // alert("Admin access only");
+    window.location.href = "index.html";
   }
 </script>
 
