--- a/public/checkout.html
+++ b/public/checkout.html
@@ -1,6 +1,6 @@
 <script>
   if (!localStorage.getItem("user")) {
-    window.location.href = "auth.html";
+    window.location.href = "index.html";
   }
 </script>
 
