--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,7 +8,7 @@
 
 <script>
   if (!localStorage.getItem("user")) {
-    location.href = "auth.html";
+    location.href = "index.html";
   }
 </script>
 
