--- a/public/admin-orders.html
+++ b/public/admin-orders.html
@@ -9,7 +9,7 @@
 <script>
   if (localStorage.getItem("role") !== "admin") {
    // alert("Admin only");
-    location.href = "auth.html";
+    location.href = "index.html";
   }
 </script>
 
