--- a/public/cart.html
+++ b/public/cart.html
@@ -20,7 +20,7 @@
 
 <div class="products">
   <h2 style="color:white">🛒 Your Cart</h2>
-  <button onclick="getcart()">Cart</button>
+  <button onclick="getCart()">Cart</button>
 
   <div id="cartItems"></div>
 
