--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,7 +17,7 @@
 
   <div class="cart-icon">
     <a href="cart.html">
-      <button onclick="getcart()">Cart</button>🛒 <span id="cartCount">0</span>
+      <button onclick="getCart()">Cart</button>🛒 <span id="cartCount">0</span>
     </a>
   </div>
 </header>
